# panel_matter

./: .gitmodules  CMakeLists.txt  README.md  c_cpp_properties.json  idf_component.yml  sdkconfig  sdkconfig.old
components (copia)/DS18B20/: CMakeLists.txt
components (copia)/avi/: CMakeLists.txt  lv_avi.h  vidoplayer.h
components (copia)/consultaApi/: CMakeLists.txt
components (copia)/esp_jpeg/: CMakeLists.txt
components (copia)/esp_jpeg/include/: esp_jpeg_dec.h
components (copia)/esp_jpeg/libs/: esp32
components (copia)/esp_jpeg/src/: audio_malloc.c
components (copia)/espressif__button/: CMakeLists.txt  iot_button.c
components (copia)/espressif_esp_jpeg/: jpeg_decoder.c
components (copia)/i2c_bsp/: CMakeLists.txt
components (copia)/lcd_bsp/: CMakeLists.txt
components (copia)/lcd_touch/: CMakeLists.txt
components (copia)/lv_port/: CMakeLists.txt  dummy.c
components (copia)/lvgl_wifi_connect/: CMakeLists.txt
components (copia)/ntp_time/: CMakeLists.txt
components (copia)/pwm/: CMakeLists.txt
components (copia)/rd_03/: CMakeLists.txt
components (copia)/relay/: CMakeLists.txt
components (copia)/uart_rs485/: CMakeLists.txt
components (copia)/usb_cam/: CMakeLists.txt
components (copia)/usb_cam/include/: usb_cam.h
components (copia)/usb_stream/: CMakeLists.txt  usb_stream.c
components (copia)/wav_play/: CMakeLists.txt
components (copia)/wifi_conect/: idf_component.yml
components (copia)/wifi_ota/: CMakeLists.txt
components (copia)/xfer_http/: CMakeLists.txt
components (copia)/xfer_http/include/: http_wifi.h
components (copia)/xfer_http/www/: index_uvc.html
components/bsp/: CMakeLists.txt
components/consultaApi/: CMakeLists.txt  consultaApi.c  consultaApi.h
components/i2c_bsp/: component.mk
components/jsonWorker/: CMakeLists.txt  json_worker.c  json_worker.h
components/lv_port/: CMakeLists.txt
components/lvgl/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  main.c
(+35 files in other folders)
